--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,11 +5,18 @@
 <html>
     <head>
         <title>@title</title>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("bootstrap/css/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("bootstrap/font-awesome/css/font-awesome.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("bootstrap/css/my_style.css")">
+        <!--<link rel="stylesheet" media="screen" href="@routes.Assets.at("bootstrap/css/style.css")"> -->
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("bootstrap/css/style-responsive")">
+        
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
     </head>
     <body>
-        @content
+        @content        
     </body>
 </html>
