--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,25 +1,21 @@
-@(message: String)
+@()
 
 @main("Login") {
 
-<div id="login-page">
-  <div class="container">  	
-    <form class="form-login" action="index.html">
-      <h2 class="form-login-heading">sign in now</h2>
-      <div class="login-wrap">
-        <input type="text" class="form-control" placeholder="Email" autofocus=""><br>
-		<input type="password" class="form-control" placeholder="Password">		               
-		<button class="btn btn-theme btn-block" href="index.html" type="submit"><i class="fa fa-lock"></i> SIGN IN</button>
-		<hr>
-		<div class="registration">
-		  Don't have an account yet?<br>
-		  <a class="" href="#">
-		    Create an account
-		  </a>
-		</div>
+  <form class="form-login" action="">
+    <h2 class="form-login-heading">pacemaker<br>sign in now</h2>
+    <div class="login-wrap">
+      <input type="text" class="form-control" placeholder="Email" autofocus=""><br>
+      <input type="password" class="form-control" placeholder="Password">		               
+      <button class="btn btn-theme btn-block" href="index.html" type="submit"><i class="fa fa-lock"></i> SIGN IN</button>
+	  <hr>
+	  <div class="registration">
+        Don't have an account yet?<br>
+		<a class="" href="/signup">
+		  Create an account
+		</a>
       </div>
-    </form>	  	  	
-  </div>
-</div>
+    </div>
+  </form>	  
 
 }
