--- a/public/bootstrap/css/my_style.css
+++ b/public/bootstrap/css/my_style.css
@@ -94,7 +94,7 @@ a, a:hover, a:focus {
 .btn-theme {
   color: #fff;
   background-color: #E60000;
-  border-color: #48bcb4;
+  border-color: #444c57;
 }
 .btn-theme:hover,
 .btn-theme:focus,
@@ -102,8 +102,8 @@ a, a:hover, a:focus {
 .btn-theme.active,
 .open .dropdown-toggle.btn-theme {
   color: #fff;
-  background-color: #48bcb4;
-  border-color: #48bcb4;
+  background-color: #444c57;
+  border-color: #444c57;
 }
 
 .btn-theme02 {
@@ -152,9 +152,9 @@ a, a:hover, a:focus {
 }
 
 .btn-clear-g {
-	color: #48bcb4;
+	color: #444c57;
 	background: transparent;
-	border-color: #48bcb4;
+	border-color: #444c57;
 }
 
 .btn-clear-g:hover {
@@ -1923,6 +1923,7 @@ label {
 
 
 /*LOGIN CONFIGURATION PAGE*/
+
 .form-login {
 	max-width: 330px;
 	margin: 100px auto 0;
@@ -1935,7 +1936,7 @@ label {
 	margin: 0;
 	padding: 25px 20px;
 	text-align: center;
-	background: #E60000;
+	background: #444c57;
 	border-radius: 5px 5px 0 0;
 	-webkit-border-radius: 5px 5px 0 0;
 	color: #fff;
