added friends, reports and activities views

--- a/app/views/activities.scala.html
+++ b/app/views/activities.scala.html
@@ -1,6 +1,4 @@
-@()
-
-@main("Index") {
+@main("Activities") {
 
   <div id="container" class="">     
     <header class="header black-bg">
@@ -14,6 +12,7 @@
     <div class="wrapper">         
       <div class="col-lg-3 ds">
         <h5 class="centered">Name and surname</h5>  
+        
 		<h3>INFO</h3>                          
         <div class="desc">
           <div class="thumb">
@@ -58,7 +57,7 @@
         <div class="row mtbox">
           <div class="col-md-2 col-sm-2 col-md-offset-2 box0">
             <div class="box1">
-			  <a href="/index"><span class=" fa fa-dashboard"></span><h4>Dashboard</h4></a>
+			   <a href="/index"><span class=" fa fa-dashboard"></span><h4>Dashboard</h4></a>
             </div>
           </div>
           <div class="col-md-2 col-sm-2 box0">
@@ -71,7 +70,6 @@
 			  <a href="/activities"><span class="fa fa-calendar"></span><h4>Activities</h4></a>
             </div>
           </div>
-          
           <div class="col-md-2 col-sm-2 box0">
             <div class="box1">
 			  <a href="/friends"><span class="fa fa-users"></span><h4>Friends</h4></a>
