made small styling changes

--- a/app/views/activities.scala.html
+++ b/app/views/activities.scala.html
@@ -10,48 +10,12 @@
       </div>
     </header>       
     <div class="wrapper">         
-      <div class="col-lg-3 ds">
-        <h5 class="centered">Name and surname</h5>  
-        
-		<h3>INFO</h3>                          
+      <div class="col-lg-3 ds">   
+		<a href=""><h2>ACTIVITIES <i class="fa fa-plus"></i></h2></a>                          
         <div class="desc">
-          <div class="thumb">
-            <span class="badge bg-theme"><i class="fa fa-clock-o"></i></span>
-          </div>
-          <div class="details">
-            <p><muted>EMAIL: </muted><br>email example</p>
-          </div>
+          <form></form>
         </div>
-        <div class="desc">
-          <div class="thumb">
-            <span class="badge bg-theme"><i class="fa fa-clock-o"></i></span>
-          </div>
-          <div class="details">
-            <p><muted>NATIONALITY: </muted><br>nationality example</p>
-          </div>
-        </div>
-		<h3>STATS</h3>
-        <div class="desc">
-          <div class="details">
-            <p>TOTAL ACTIVITIES: <br>
-              <muted>0</muted>
-            </p>
-          </div>
-        </div>
-        <div class="desc">
-          <div class="details">
-            <p>TOTAL DISTANCE: <br>
-              <muted>0 mi</muted>
-            </p>
-          </div>
-        </div>
-        <div class="desc">
-          <div class="details">
-            <p>TOTAL CALORIES: <br>
-              <muted>0</muted>
-            </p>
-          </div>
-        </div>
+    
       </div>
       <div class="col-lg-9">         
         <div class="row mtbox">
@@ -81,7 +45,7 @@
 	    </div>	         
         <div class="row mt">
           <div class="col-md-4 col-sm-4 mb">
-            <div class="white-panel pn">
+            <div class="activities-white-panel pn">
               <div class="white-header">
 		        <h5>TOTAL MI</h5>
               </div>
@@ -97,7 +61,7 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-4 mb">
-            <div class="white-panel pn">
+            <div class="activities-white-panel pn">
               <div class="white-header">
 		        <h5>TOTAL ACTIVITIES</h5>
               </div>
@@ -113,7 +77,7 @@
           </div>
         </div>
         <div class="col-md-4 col-sm-4 mb">
-          <div class="white-panel pn">
+          <div class="activities-white-panel pn">
             <div class="white-header">
 		      <h5>TOTAL CALORIES</h5>
             </div>
