--- a/app/views/activities.scala.html
+++ b/app/views/activities.scala.html
@@ -11,9 +11,13 @@
     </header>       
     <div class="wrapper">         
       <div class="col-lg-3 ds">   
-		<a href=""><h2>ACTIVITIES <i class="fa fa-plus"></i></h2></a>                          
+		<a href=""><h2>ACTIVITIES</h2></a>                          
         <div class="desc">
-          <form></form>
+          <form>
+            <input type="text" class="form-control" name="" placeholder="" autofocus=""><br>
+            <input type="text" class="form-control" name="" placeholder=""><br>		               
+            <button class="btn btn-blue btn-block" type="submit"><i class="fa fa-plus"></i> ADD</button>
+          </form>
         </div>
       </div>
       <div class="col-lg-9">         
