--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -7,20 +7,20 @@
       <a href="" class="logo"><b>PACEMAKER</b></a>
       <div class="top-menu">
         <ul class="nav pull-right top-menu">
-          <li><a class="logout" href="">Logout</a></li>
+          <li><a class="logout" href="/logout">Logout</a></li>
         </ul>
       </div>
     </header>       
     <div class="wrapper">         
       <div class="col-lg-3 ds">
-        <h5 class="centered">Name and surname</h5>  
+        <h5 class="centered">name and surname</h5>  
 		<h3>INFO</h3>                          
         <div class="desc">
           <div class="thumb">
             <span class="badge bg-theme"><i class="fa fa-clock-o"></i></span>
           </div>
           <div class="details">
-            <p><muted>EMAIL: </muted><br>email example</p>
+            <p><muted>EMAIL: </muted>email<br></p>
           </div>
         </div>
         <div class="desc">
