--- a/app/views/signup.scala.html
+++ b/app/views/signup.scala.html
@@ -9,7 +9,7 @@
       <input type="text" class="form-control" name="lastname" placeholder="Last Name" autofocus=""><br>
       <input type="text" class="form-control" name="nationality" placeholder="Nationality" autofocus=""><br>
       <input type="text" class="form-control" name="email" placeholder="Email" autofocus=""><br>
-      <input type="password" class="form-control" placeholder="Password">		               
+      <input type="password" class="form-control" name="password" placeholder="Password" autofocus="">		               
       <button class="btn btn-theme btn-block" type="submit"><i class="fa fa-lock"></i> SIGN UP</button>
 	  <hr>
     </div>
