--- a/app/views/activities.scala.html
+++ b/app/views/activities.scala.html
@@ -13,10 +13,18 @@
       <div class="col-lg-3 ds">   
 		<a href=""><h2>ACTIVITIES</h2></a>                          
         <div class="desc">
-          <form>
-            <input type="text" class="form-control" name="" placeholder="" autofocus=""><br>
-            <input type="text" class="form-control" name="" placeholder=""><br>		               
-            <button class="btn btn-blue btn-block" type="submit"><i class="fa fa-plus"></i> ADD</button>
+          <form action="/activities/uploadActivity" method="POST">
+            <select id="type" name="type">
+              <option value="1">Running</option>
+              <option value="2">Cycling</option>
+            </select>
+            <input type="text" class="form-control" name="location" placeholder="Location"><br>	
+            <input type="text" class="form-control" name="distance" placeholder="Distance"><br>		               
+            <input type="text" class="form-control" name="date" placeholder="Date"><br>		               
+            <input type="text" class="form-control" name="duration" placeholder="Duration"><br>		               
+            <input type="text" class="form-control" name="averageSpeed" placeholder="Average Speed"><br>		               
+            <input type="text" class="form-control" name="caloriesBurned" placeholder="Calories Burned"><br>		               	               
+            <button class="btn btn-blue btn-block" type="submit"><i class="fa fa-upload"></i> Upload</button>
           </form>
         </div>
       </div>
