added friendship model, route and controller, added chartkick.js for graphs

--- a/app/views/friends.scala.html
+++ b/app/views/friends.scala.html
@@ -1,6 +1,6 @@
 @(users: List[User])
 
-@main("Friends") {
+@main("Members") {
 
 <div id="container" class="">     
   <header class="header black-bg">
