added sample graphs

--- a/app/views/reports.scala.html
+++ b/app/views/reports.scala.html
@@ -44,76 +44,40 @@
 	  </div>
       <div class="row">
         <div class="col-md-12 mb">
-          <div class="darkblue-panel pn">
-            <div class="darkblue-header">
-			  <h5>DISTANCE</h5>
-            </div>
-            <p>Date example</p>
-			<footer>
-			  <div class="pull-left">
-		        <h5><i class="fa fa-hdd-o"></i> ll</h5>
-		      </div>
-		      <div class="pull-right">
-			    <h5>Number</h5>
-		      </div>
-		    </footer>
+          <h3>Distance</h3>
+          <div id="chart-1" style="height: 300px;"></div>
+            <script>
+              new Chartkick.LineChart("chart-1", {"2013-02-10 00:00:00 -0800":11,"2013-02-11 00:00:00 -0800":6,"2013-02-12 00:00:00 -0800":3,"2013-02-13 00:00:00 -0800":2,"2013-02-14 00:00:00 -0800":5,"2013-02-15 00:00:00 -0800":3,"2013-02-16 00:00:00 -0800":8,"2013-02-17 00:00:00 -0800":6,"2013-02-18 00:00:00 -0800":6,"2013-02-19 00:00:00 -0800":12,"2013-02-20 00:00:00 -0800":5,"2013-02-21 00:00:00 -0800":5,"2013-02-22 00:00:00 -0800":3,"2013-02-23 00:00:00 -0800":1,"2013-02-24 00:00:00 -0800":10,"2013-02-25 00:00:00 -0800":1,"2013-02-26 00:00:00 -0800":3,"2013-02-27 00:00:00 -0800":2,"2013-02-28 00:00:00 -0800":3,"2013-03-01 00:00:00 -0800":2,"2013-03-02 00:00:00 -0800":8});
+            </script>
           </div>
-	    </div>
-      </div>
-      
-      <h1>Line Chart</h1>
-    <div id="chart-1" style="height: 300px;"></div>
-    <script>
-      new Chartkick.LineChart("chart-1", {"2013-02-10 00:00:00 -0800":11,"2013-02-11 00:00:00 -0800":6,"2013-02-12 00:00:00 -0800":3,"2013-02-13 00:00:00 -0800":2,"2013-02-14 00:00:00 -0800":5,"2013-02-15 00:00:00 -0800":3,"2013-02-16 00:00:00 -0800":8,"2013-02-17 00:00:00 -0800":6,"2013-02-18 00:00:00 -0800":6,"2013-02-19 00:00:00 -0800":12,"2013-02-20 00:00:00 -0800":5,"2013-02-21 00:00:00 -0800":5,"2013-02-22 00:00:00 -0800":3,"2013-02-23 00:00:00 -0800":1,"2013-02-24 00:00:00 -0800":10,"2013-02-25 00:00:00 -0800":1,"2013-02-26 00:00:00 -0800":3,"2013-02-27 00:00:00 -0800":2,"2013-02-28 00:00:00 -0800":3,"2013-03-01 00:00:00 -0800":2,"2013-03-02 00:00:00 -0800":8});
-    </script>
-      
-       <div class="row">
-        <div class="col-md-12 mb">
-          <div class="darkblue-panel pn">
-            <div class="darkblue-header">
-			  <h5>DURATION</h5>
-            </div>
-            <p>Date example</p>
-			<footer>
-			  <div class="pull-left">
-		        <h5><i class="fa fa-hdd-o"></i> ll</h5>
-		      </div>
-		      <div class="pull-right">
-			    <h5>Number</h5>
-		      </div>
-		    </footer>
+        </div>
+        <div class="row">
+          <div class="col-md-12 mb">
+            <h3>Duration</h3>
+            <div id="chart-3" style="height: 300px;"></div>
+              <script>
+                new Chartkick.ColumnChart("chart-3", [["0",32],["1",46],["2",28],["3",21],["4",20],["5",13],["6",27]]);
+              </script>
+	        </div>
           </div>
-	    </div>
+          <div class="row">
+            <div class="col-md-12 mb">
+              <h3>Calories Burned</h3>
+              <div id="chart-100" style="height: 300px;"></div>
+                <script>
+                  new Chartkick.BarChart("chart-100", [["0",32],["1",46],["2",28],["3",21],["4",20],["5",13],["6",27]]);
+                </script>
+	          </div>
+            </div> 
+	      </div>
+        </div>
       </div>
-      
-      <div class="row">
-        <div class="col-md-12 mb">
-          <div class="darkblue-panel pn">
-            <div class="darkblue-header">
-			  <h5>CALORIES BURNED</h5>
-            </div>
-            <p>Date example</p>
-			<footer>
-			  <div class="pull-left">
-		        <h5><i class="fa fa-hdd-o"></i> ll</h5>
-		      </div>
-		      <div class="pull-right">
-			    <h5>Number</h5>
-		      </div>
-		    </footer>
-          </div>
-	    </div>
+    </div>
+    <footer class="site-footer">
+      <div class="text-center">
+        2015 - Pacemaker
       </div>
-      
-	</div>
+    </footer>
   </div>
-</div>
-</div>
-<footer class="site-footer">
-  <div class="text-center">
-    2015 - Pacemaker
-  </div>
-</footer>
-</div>
 
 }
