--- a/app/views/activities.scala.html
+++ b/app/views/activities.scala.html
@@ -5,7 +5,7 @@
       <a href="" class="logo"><b>PACEMAKER</b></a>
       <div class="top-menu">
         <ul class="nav pull-right top-menu">
-          <li><a class="logout" href="">Logout</a></li>
+          <li><a class="logout" href="/logout">Logout</a></li>
         </ul>
       </div>
     </header>       
