improved add activity feature and added ajax for displaying details when being typed or selected

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -68,7 +68,7 @@
           </div>
           <div class="col-md-2 col-sm-2 box0">
             <div class="box1">
-			  <a href="/activities"><span class="fa fa-calendar"></span><h4>Activities</h4></a>
+			  <a href="/users/@user.id/activities"><span class="fa fa-calendar"></span><h4>Activities</h4></a>
             </div>
           </div>
           
@@ -131,27 +131,11 @@
           </div>
         </div>
       </div>
-      <div class="centered">
-	    <h2>Recent Activities</h2>
+      <div class="col-lg-4"></div>
+      <div class="col-lg-4 centered">
+        <a href="/postactivity"><h2>Post New Activity</h2></a>  
 	  </div>
-      <div class="row">
-        <div class="col-md-12 mb">
-          <div class="darkblue-panel pn">
-            <div class="darkblue-header">
-			  <h5>STATICS</h5>
-            </div>
-            <p>Date example</p>
-			<footer>
-			  <div class="pull-left">
-		        <h5><i class="fa fa-hdd-o"></i> ll</h5>
-		      </div>
-		      <div class="pull-right">
-			    <h5>Number</h5>
-		      </div>
-		    </footer>
-          </div>
-	    </div>
-      </div>
+	  <div class="col-lg-4"></div>
 	</div>
   </div>
 </div>
