--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,10 +15,13 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jsapi.js")"></script>
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
+        <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>        
         <script src="@routes.Assets.at("javascripts/chartkick.js")"></script>
+                
     </head>
     <body>
         @content        
     </body>
+    
+        <script src="@routes.Assets.at("javascripts/my_scripts.js")"></script>
 </html>
