--- a/app/views/activities.scala.html
+++ b/app/views/activities.scala.html
@@ -1,3 +1,5 @@
+@(user : User)
+
 @main("Activities") {
 
   <div id="container" class="">     
@@ -10,29 +12,12 @@
       </div>
     </header>       
     <div class="wrapper">         
-      <div class="col-lg-3 ds">   
-		<a href=""><h2>ACTIVITIES</h2></a>                          
-        <div class="desc">
-          <form action="/activities/uploadActivity" method="POST">
-            <select id="type" name="type">
-              <option value="1">Running</option>
-              <option value="2">Cycling</option>
-            </select>
-            <input type="text" class="form-control" name="location" placeholder="Location"><br>	
-            <input type="text" class="form-control" name="distance" placeholder="Distance"><br>		               
-            <input type="text" class="form-control" name="date" placeholder="Date"><br>		               
-            <input type="text" class="form-control" name="duration" placeholder="Duration"><br>		               
-            <input type="text" class="form-control" name="averageSpeed" placeholder="Average Speed"><br>		               
-            <input type="text" class="form-control" name="caloriesBurned" placeholder="Calories Burned"><br>		               	               
-            <button class="btn btn-blue btn-block" type="submit"><i class="fa fa-upload"></i> Upload</button>
-          </form>
-        </div>
-      </div>
+      <div class="col-lg-3"></div>
       <div class="col-lg-9">         
         <div class="row mtbox">
           <div class="col-md-2 col-sm-2 col-md-offset-2 box0">
             <div class="box1">
-			   <a href="/index"><span class=" fa fa-dashboard"></span><h4>Dashboard</h4></a>
+			   <a href="/index"><span class="fa fa-dashboard"></span><h4>Dashboard</h4></a>
             </div>
           </div>
           <div class="col-md-2 col-sm-2 box0">
